styles/style.css
:root {
  --bcit-blue: #003c71;
  --bcit-yellow: #fff400;
  --accent-purple: #602aa9;
  --accent-turquoise: #00a69d;
  --rollover-blue: #0055ce;
  --link-blue: #0069ff;
  --header-height: 10vh;
  --footer-height: 5vh;
  --map-height: calc(100vh - (var(--header-height) + var(--footer-height)));
}

ul {
  list-style-type: none;
}

#region header
/* #headerPlaceholder {
  max-height: var(--header-height);
} */

.text-muted {
  color: var(--bcit-yellow) !important;
}

/* #region navbar */
.navbar-brand {
  color: var(--bcit-yellow);
}

.navbar-dark .navbar-toggler-icon {
  /*
  * Unfortunately, we need to dig through this huge line to find the rgba
  * if we want to change the color of our narbar toggle icon.
  */
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"
    );
}

/* #endregion navbar*/

/* #region buttons */
.bg-primary {
  background-color: var(--bcit-blue) !important;
}

.btn {
  background-color: var(--bcit-blue);
}

.btn :hover {
  background-color: var(--rollover-blue)
}

#logoutButton {
  visibility: hidden;
}

.signInButton {
  visibility: visible;
}

.navbar-toggler-icon {
  font-size: 1.8rem;
}

/* #endregion buttons */

/* #region searchBar */
.search-bar {
  align-items: center;
  background-color: #FFF;
}

.input-group {
  display: none;
  align-items: center;
  flex: 1;
}

.search-input {
  width: 100%;
  padding: 10px 12px;
  border: 1px solid #fff400;
  font-size: 16pt;
  border-radius: 24px;
  outline: none;
  border: none;
  box-shadow: none !important;
  background-color: transparent;
  flex: 1;
  margin-right: 8px;
}

.search-button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 8px;
}

.search-button:hover {
  background-color: transparent;
}


.nav-item {
  z-index:8;
  background-color: #003c71;
}

.search-bar {
  z-index:9;
}

.suggestionBox {
  display: none;
  width: 100%;
  padding: 10px 12px;
  background-color: #FFF;
  font-size: 16pt;
  border-radius: 24px;
  flex: 1;
  z-index: 9;
  margin-right: 8px;
}

.dropdown-item:hover {
  background-color: #f0f0f0;
}

/* #endregion searchbar*/
/* #endregion header*/

/* #region map */
#mapArea {
  background-color: var(--accent-turquoise);
  /* max-height: var(--map-height); */
}

#roadsAndPaths {
  stroke: var(--bcit-yellow);
  fill: none;
}

#buildings {
  fill: var(--accent-purple);
  stroke: var(--bcit-yellow);
}

#followUserIcon {
  color: var(--bcit-blue);
  font-size: calc(3rem + 3vh) !important;
}

#userIcon {
  stroke: var(--rollover-blue);
  stroke-width: 0.1rem;
  fill: none;
}

.pathfindingNode {
  fill: black;
}

.pathfindingLine {
  stroke:red;
  stroke-width: 1;
}

#destinationPin{
  font-size: large;
}
#destinationPopup{
  background-color: rgb(48, 48, 56,50%);
  color: var(--rollover-blue);
  min-height: 10vh;
  text-align: center;
}
#pathButton{
  color: white; 
  max-height: 40px;
}

/* #endregion map*/

